--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie": "^0.3.1",
     "crypto": "0.0.3",
     "express": "^4.15.3",
+    "on-headers": "^1.0.1",
     "pug": "^2.0.0-rc.2"
   },
   "devDependencies": {
